--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+  <head>
+    <link href="/css/style.css" rel="stylesheet">
+    <title>Shell 'n Stuff</title>
+  </head>
 <body>
 Hello world!
 </body>
