--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <html>
   <head>
     <link href="/css/style.css" rel="stylesheet">
+        <script src="jquery.js"></script> 
+    <script> 
+    $(function(){
+      $("#includedContent").load("menu.html"); 
+    });
+    </script> 
     <title>Shell 'n Stuff</title>
   </head>
 <body>
 Hello world!
+  <div id="includedContent"></div>
 </body>
 </html>
