--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Shell 'n Stuff</title>
   </head>
 <body>
-  Hello world! - <a href=menu.html>Link to menu</a>
+  Hello world! - <a href=menu.html>Link to menu2</a>
   <div id="includedContent"></div>
 </body>
 </html>
