--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
 <html>
   <head>
     <link href="/css/style.css" rel="stylesheet">
-        <script src="jquery.js"></script> 
-    <script> 
-    $(function(){
-      $("#includedContent").load("menu.html"); 
-    });
-    </script> 
     <title>Shell 'n Stuff</title>
   </head>
-<body>
+<body style="mainContent">
   Hello world! - <a href=menu.html>Link to menu2</a>
   <div id="includedContent"></div>
 </body>
