--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Shell 'n Stuff</title>
   </head>
 <body style="mainContent">
-  Hello world! - <a href=menu.html>Link to menu2</a>
-  <div id="includedContent"></div>
+  <table class=headerTable><tr><td></td><td></td></table>
 </body>
 </html>
