--- a/index.html
+++ b/index.html
@@ -2,8 +2,23 @@
   <head>
     <link href="/css/style.css" rel="stylesheet">
     <title>Shell 'n Stuff</title>
+    <style>
+      .mainContent{
+    width: 100%;
+    height: auto;
+    background-color: #cecece;
+}
+.headerTable
+{
+    width:100%;
+    font-colour:#e09738;
+    font: arial;
+    font-size:12px;
+    
+}
+    </style>
   </head>
 <body style="mainContent">
-  <table class=headerTable><tr><td></td><td></td></table>
+  <table class=headerTable><tr><td>PowerShell & Graph</td><td>Articles | About</td></tr></table>
 </body>
 </html>
