--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
   <head>
-    <link href="/css/style.css" rel="stylesheet">
-    <title>Shell 'n Stuff</title>
+  <title>PowerShell & Graph</title>
     <style>
       .mainContent{
     width: 100%;
