--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
   <head>
   <title>PowerShell & Graph</title>
     <style>
-      .mainContent{
-    width: 100%;
-    height: auto;
-    background-color: #cecece;
-}
+      .mainContent
+      {
+        width: 100%;
+        height: auto;
+        background-color: #cecece;
+      }
 .headerTable
 {
     width:100%;
     font-colour:#e09738;
     font: arial;
     font-size:12px;
-    
+    background-color: #cecece;
 }
     </style>
   </head>
