--- a/index.html
+++ b/index.html
@@ -2,23 +2,19 @@
   <head>
   <title>PowerShell & Graph</title>
     <style>
-      .mainContent
-      {
-        width: 100%;
-        height: auto;
-        background-color: #cecece;
-      }
+      body { margin: 0; padding: 0; background-color:#cecece; }
+
 .headerTable
 {
     width:100%;
     font-colour:#e09738;
-    font: arial;
+    font-family: arial;
     font-size:12px;
     background-color: #cecece;
 }
     </style>
   </head>
-<body style="mainContent">
+<body>
   <table class=headerTable><tr><td>PowerShell & Graph</td><td>Articles | About</td></tr></table>
 </body>
 </html>
