--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     </style>
   </head>
 <body>
-  <table class=headerTable><tr><td>PowerShell & Graph</td><td>Articles | About</td></tr></table>
+  <table class=headerTable><tr><td style='font-size:20px;width:60px;'>PowerShell & Graph</td><td>Articles | About</td></tr></table>
 </body>
 </html>
