--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 .headerTable
 {
     width:100%;
-    font-colour:#e09738;
+    color:#e09738;
     font-family: arial;
     font-size:12px;
     background-color: #cecece;
