--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     </style>
   </head>
 <body>
-  <table class=headerTable><tr><td style='font-size:20px;width:60px;border-left:30px;border-top:30px;'>PowerShell & Graph</td><td style='color:#e09738;'>Articles | About</td></tr></table>
+  <table class=headerTable><tr><td style='font-size:20px;width:60px;padding-left:30px;padding-top:30px;color:black;'>PowerShell & Graph</td><td style='color:#e09738;'>Articles | About</td></tr></table>
 </body>
 </html>
