--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     color:#e09738;
     font-family: arial;
     font-size:12px;
-    background-color: #cecece;
 }
     </style>
   </head>
 <body>
-  <table class=headerTable><tr><td style='font-size:20px;width:60px;padding-left:30px;padding-top:30px;color:black;'>PowerShell & Graph</td><td style='color:#e09738;'>Articles | About</td></tr></table>
+  <table class=headerTable><tr><td style='font-size:24px;padding:30px;color:black;'>PowerShell & Graph</td><td style='color:#e09738;'>Articles | About</td></tr></table>
 </body>
 </html>
