--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     </style>
   </head>
 <body>
-  <table class=headerTable><tr><td style='font-size:24px;padding:30px;color:black;'>PowerShell & Graph</td><td style='color:#e09738;'>Articles | About</td></tr></table>
+  <table class=headerTable><tr><td style='font-size:48px;padding:30px;color:black;'>PowerShell & Graph</td><td style='color:#e09738;padding30px;'><b>Articles | About</b></td></tr></table>
 </body>
 </html>
