--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     </style>
   </head>
 <body>
-  <table class=headerTable><tr><td style='font-size:96px;padding:30px;color:black;width:60px;'>PowerShell<br><br>& Graph</td><td style='color:#e09738;padding30px;'><b>Articles | About</b></td></tr></table>
+  <table class=headerTable>
+    <tr>
+      <td style='font-size:96px;padding:30px;color:black;width:90px;'>PowerShell<br> & Graph</td>
+      <td style='color:#e09738;padding30px;font-size:30px;'><b>Articles | About</b></td>
+    </tr>
+  </table>
 </body>
 </html>
