--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <li> Report on all users logged in successfully in a 24 hour period.
             <li> Do IPv6 country lookups, something Microsoft does not currently do.
               <li> Exclude certain countries from the report, eg you might not be interested in logons from your home country.
+                <li> Send an alert email if suspicious logons are detected.
         </div>
       </td>
     </tr>
