--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             <li> Do IPv6 country lookups, something Microsoft does not currently do.
               <li> Exclude certain countries from the report, eg you might not be interested in logons from your home country.
                 <li> Send an alert email if suspicious logons are detected.
+                 <br>
+                  <img src=image01.png alt="Image of logons detected">
         </div>
       </td>
     </tr>
