--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         font-size:13px;
         color:black;
       }
+      .imageCaption
+      {
+       color:1c1c1c
+       font-style: italic;
+        font-siz:12px;
+      }
     </style>
   </head>
 <body>
@@ -41,9 +47,10 @@
           <li> Report on all users logged in successfully in a 24 hour period.
             <li> Do IPv6 country lookups, something Microsoft does not currently do.
               <li> Exclude certain countries from the report, eg you might not be interested in logons from your home country.
-                <li> Send an alert email if suspicious logons are detected.
+                <li> Send an alert email if suspicious logons are detected.<br>
                  <br>
                   <img src=image01.png alt="Image of logons detected">
+                                    <div class=ImageCaption>Alert email to show logons from certain countries.</div>
         </div>
       </td>
     </tr>
