--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       }
       .imageCaption
       {
-       color:1c1c1c
+       color:#1c1c1c;
        font-style: italic;
         font-siz:12px;
       }
