--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
        font-style: italic;
         font-siz:12px;
       }
+ .horizontal_dotted_line{
+  border-bottom: 1px dotted [color];
+  width: [put your width here]px;
+} 
     </style>
   </head>
 <body>
@@ -51,6 +55,9 @@
                  <br>
                   <img src=image01.png alt="Image of logons detected">
                                     <div class=ImageCaption>Alert email to show logons from certain countries.</div>
+                  <br>
+                  <br>
+                  <div class="horizontal_dotted_line"></div>
         </div>
       </td>
     </tr>
