--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
                                     <div class=ImageCaption>Alert email to show logons from certain countries.</div>
                   <br>
                   <br>
+                  <div class=tags>Tags: IPv4 Graph PowerShell</div><br>
+                  <br>
                   <div class="horizontal_dotted_line"></div>
         </div>
       </td>
