--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       }
  .horizontal_dotted_line{
   border-bottom: 1px dotted [color];
-  width: [put your width here]px;
+  width: 300px;
 } 
     </style>
   </head>
