--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         font-siz:12px;
       }
  .horizontal_dotted_line{
-  border-bottom: 1px dotted [color];
+  border-bottom: 1px dotted;
   width: 300px;
 } 
     </style>
