--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         font-siz:12px;
       }
  .horizontal_dotted_line{
-  border-bottom: 1px dotted;
-  width: 300px;
+  border-bottom: 4px dotted;
+  width: 90%;
 } 
     </style>
   </head>
