--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                   <br>
                   <div class=tags>Tags: IPv4 Graph PowerShell</div><br>
                   <br>
-                  <div class="horizontal_dotted_line"></div>
+                  <div class="horizontal_dotted_line"></div><br>
+                  <br>
         </div>
       </td>
     </tr>
