--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                   <br>
                   <div class=tags>Tags: IPv4 Graph PowerShell</div><br>
                   <br>
-                  <div class="horizontal_dotted_line"></div><br>
+                  <div class="horizontal_dotted_line" style='align:center;'></div><br>
                   <br>
         </div>
       </td>
