--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
   <title>PowerShell & Graph</title>
     <style>
-      body { margin: 0; padding: 0; background-color:#cecece; }
+      body { margin: 0; padding: 0; background-color:#c9c7c7; }
 
 .headerTable
 {
