--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       }
  .horizontal_dotted_line{
   border-bottom: 4px dotted;
-  width: 75%;
+  width: 85%;
+   text-align:center;
 } 
     </style>
   </head>
@@ -59,7 +60,7 @@
                   <br>
                   <div class=tags>Tags: IPv4 Graph PowerShell</div><br>
                   <br>
-                  <div class="horizontal_dotted_line" style='align:center;'></div><br>
+                  <div class="horizontal_dotted_line"></div><br>
                   <br>
         </div>
       </td>
