--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
   <table class=headerTable>
     <tr>
-      <td style='font-size:50px;padding:30px;color:black;width:120px;'>PowerShell<br> & Graph</td>
+      <td style='font-size:50px;padding:30px;color:black;width:120px;'>PowerShell<br> & Graph<br>Blog</td>
       <td style='color:#e09738;padding30px;font-size:15px;'><b>Articles | About</b></td>
     </tr>
     <tr>
