--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
   <title>PowerShell & Graph</title>
     <style>
       body { margin: 0; padding: 0; background-color:#c9c7c7; }
+a:link {
+  color: red;
+}
 
+/* visited link */
+a:visited {
+  color: orange;
+}
+
+/* mouse over link */
+a:hover {
+  color: hotpink;
+}
 .headerTable
 {
     width:100%;
