--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@ a:link {
 
 /* visited link */
 a:visited {
-  color: orange;
+  color: #81a0c4;
 }
 
 /* mouse over link */
 a:hover {
-  color: hotpink;
+  color: #99adc4;
 }
 .headerTable
 {
