--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <style>
       body { margin: 0; padding: 0; background-color:#c9c7c7; }
 a:link {
-  color: red;
+  color: #646d8c;
 }
 
 /* visited link */
 a:visited {
-  color: #81a0c4;
+  color: #646d8c;
 }
 
 /* mouse over link */
