--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ a:hover {
       
     </tr>
     <tr>
-      <td style='color:#e09738;padding30px;font-size:15px;height:30px;'><b>Articles | About |</b></td>
+      <td style='color:#e09738;padding30px;font-size:15px;height:30px;'><b>Articles | About | Links</b></td>
     </tr>
     <tr>
       <td></td>
