--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@ a:visited {
 a:hover {
   color: #646d8c;
 }
+      
+a.one:link {color: #e09738; text-decoration: none;}
+a.one:visited {color: #e09738;  text-decoration: none;}
+a.one:hover {color: #e09738;}
 .headerTable
 {
     width:100%;
@@ -56,7 +60,7 @@ a:hover {
       
     </tr>
     <tr>
-      <td style='color:#e09738;padding30px;font-size:15px;height:30px;'><b>Articles | About | Links</b></td>
+      <td style='color:#e09738;padding30px;font-size:15px;height:30px;' class=one><b>Articles | About | Links</b></td>
     </tr>
     <tr>
       <td></td>
