--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ a.one:hover {color: #e09738;}
       
     </tr>
     <tr>
-      <td style='color:#e09738;padding30px;font-size:15px;height:30px;' class=one><b>Articles | About | Links</b></td>
+      <td style='color:#e09738;padding30px;font-size:15px;height:30px;' class=one><b>Articles | <a href=about.html>About</a> | <a href=links.html>Links</a></b></td>
     </tr>
     <tr>
       <td></td>
