--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@ window.onclick = function(event) {
       <td style='color:#e09738;padding30px;font-size:15px;height:30px;' class=one><b> <div class="dropdown">
   <button onclick="myFunction()" class="dropbtn">Articles</button>
   <div id="myDropdown" class="dropdown-content">
-    <a href="#AzureLogons">Azure logons/a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
+    <a href="#AzureLogons" class=one>Azure logons</a>
+    <a href="#" class=one>Link 2</a>
+    <a href="#" >Link 3</a>
   </div>
-</div> | <a href=about.html>About</a> | <a href=links.html>Links</a></b></td>
+</div> | <a href=about.html class=one>About</a> | <a href=links.html class=one>Links</a></b></td>
     </tr>
     <tr>
       <td></td>
