--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@ a.one:hover {color: #e09738;}
       
        /* Dropdown Button */
 .dropbtn {
-  background-color: #3498DB;
-  color: white;
+  color: #e09738;
   padding: 16px;
-  font-size: 16px;
+  font-size: 15px;
   border: none;
   cursor: pointer;
 }
