--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ a.one:hover {color: #e09738;}
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
+  background-color: #c9c7c7;
 }
 
 /* The container <div> - needed to position the dropdown content */
