--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@ a.one:hover {color: #e09738;}
       
        /* Dropdown Button */
 .dropbtn {
-  color: #e09738;
-  padding: 16px;
+  padding: 10px;
   font-size: 15px;
   border: none;
   cursor: pointer;
@@ -63,7 +62,7 @@ a.one:hover {color: #e09738;}
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
-  background-color: #c9c7c7;
+ 
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -130,7 +129,7 @@ window.onclick = function(event) {
     </tr>
     <tr>
       <td style='color:#e09738;padding30px;font-size:15px;height:30px;' class=one><b> <div class="dropdown">
-  <button onclick="myFunction()" class="dropbtn">Articles</button>
+  <button onclick="myFunction()" class="dropbtn">Articles ˅</button>
   <div id="myDropdown" class="dropdown-content">
     <a href="#AzureLogons" class=one>Azure logons</a>
     <a href="#" class=one>Link 2</a>
