--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ a.one:hover {color: #e09738;}
        /* Dropdown Button */
 .dropbtn {
   padding: 10px;
+  color:#e09738;
+  background-color:#c9c7c7;
   font-size: 15px;
   border: none;
   cursor: pointer;
@@ -62,7 +64,7 @@ a.one:hover {color: #e09738;}
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
- 
+ background-color:#c9c7c7;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -131,9 +133,8 @@ window.onclick = function(event) {
       <td style='color:#e09738;padding30px;font-size:15px;height:30px;' class=one><b> <div class="dropdown">
   <button onclick="myFunction()" class="dropbtn">Articles ˅</button>
   <div id="myDropdown" class="dropdown-content">
-    <a href="#AzureLogons" class=one>Azure logons</a>
-    <a href="#" class=one>Link 2</a>
-    <a href="#" >Link 3</a>
+    <a href="#AzureLogons" class=one>Reporting on successful Azure logons</a>
+   
   </div>
 </div> | <a href=about.html class=one>About</a> | <a href=links.html class=one>Links</a></b></td>
     </tr>
