--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ a.one:hover {color: #e09738;}
   font-size: 15px;
   border: none;
   cursor: pointer;
+  font-weight: bold;
 }
 
 /* Dropdown button on hover & focus */
@@ -78,7 +79,7 @@ a.one:hover {color: #e09738;}
   display: none;
   position: absolute;
   background-color: #f1f1f1;
-  min-width: 160px;
+  min-width: 280px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
