--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ a.one:hover {color: #e09738;}
 } 
 
       li {
-  color: #fff;
-  background: darkorange;
+  color: darkorange;
+  background: #c9c7c7;
   display: block;
   float: left;
   padding: 1rem;
@@ -69,7 +69,7 @@ li a {
 
 li:hover,
 li:focus-within {
-  background: red;
+  background: #c9c7c7;
   cursor: pointer;
 }
 
