--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ a.one:hover {color: #e09738;}
 } 
 
       li {
-  color: darkorange;
+  color: #000;
   background: #c9c7c7;
   display: block;
   float: left;
@@ -64,7 +64,7 @@ a.one:hover {color: #e09738;}
 }
   
 li a {
-  color: #fff;
+  color: #000;
 }
 
 li:hover,
@@ -119,7 +119,7 @@ ul li ul li {
 
 <nav role="navigation">
   <ul>
-    <li><a href=about.html class=one>About</a></li>
+    
     <li><a href="#">Two</a>
       <ul class="dropdown">
         <li><a href="#AzureLogons" class=one>Reporting on successful Azure logons</a></li>
@@ -127,7 +127,8 @@ ul li ul li {
         <li><a href="#">Sub-3</a></li>
       </ul>
     </li>
-    <li><a href=links.html class=one>Links</a></li>
+    | <li><a href=about.html class=one>About</a></li>
+    | <li><a href=links.html class=one>Links</a></li>
   </ul>
 </nav>
 
