--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ a.one:hover {color: #e09738;}
   display: block;
   float: left;
   padding: 1rem;
+  font-size:15px;
   position: relative;
   text-decoration: none;
   transition-duration: 0.5s;
@@ -127,8 +128,8 @@ ul li ul li {
         <li><a href="#">Sub-3</a></li>
       </ul>
     </li>
-    | <li><a href=about.html class=one>About</a></li>
-    | <li><a href=links.html class=one>Links</a></li>
+    <li><a href=about.html class=one>About</a></li>
+    <li><a href=links.html class=one>Links</a></li>
   </ul>
 </nav>
  </tr>
