--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ ul li ul {
   opacity: 0;
   min-width: 400px;
   position: absolute;
+  font-size: 14px;
   transition: all 0.5s ease;
   margin-top: 1rem;
   left: 0;
