--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@ a:hover {
 a.one:link {color: #e09738; text-decoration: none;}
 a.one:visited {color: #e09738;  text-decoration: none;}
 a.one:hover {color: #e09738;}
+      
+a.two:link {color: #646d8c; text-decoration: none; font-size:14px;}
+a.two:visited {color: #646d8c;  text-decoration: none;font-size:14px;}
+a.two:hover {color: #646d8c;font-size:14px;}
+      
 .headerTable
 {
     width:100%;
@@ -125,9 +130,9 @@ ul li ul li {
     <li><a href="#" class=one>Articles</a>
       <ul class="dropdown">
         <li><a href="#AzureLogons">Reporting on successful Azure logons</a></li>
-        <li><a href="#2">Secure Office365 reports with a certifificate</a></li>
-        <li><a href="#3">Using Graph to send emails with inline images</a></li>
-        <li><a href="#4">Visualizing Graph data into Google Charts</a></li>
+        <li><a href="#2" class=two>Secure Office365 reports with a certifificate</a></li>
+        <li><a href="#3" class=two>Using Graph to send emails with inline images</a></li>
+        <li><a href="#4" class=two>Visualizing Graph data into Google Charts</a></li>
       </ul>
     </li>
     <li><a href=about.html class=one>About</a></li>
