--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ a.one:visited {color: #e09738;  text-decoration: none;}
 a.one:hover {color: #e09738;}
       
 a.two:link {color: #646d8c; text-decoration: none; font-size:14px;}
-a.two:visited {color: #646d8c;  text-decoration: none;font-size:14px;}
-a.two:hover {color: #646d8c;font-size:14px;}
+a.two:visited {color: #646d8c;  text-decoration: none; font-size:14px;}
+a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
       
 .headerTable
 {
