--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ li a {
 
 li:hover,
 li:focus-within {
-  background: #777777;
+  background: #c9c7c7;
   cursor: pointer;
 }
 
@@ -84,7 +84,7 @@ li:focus-within a {
 }
 
 ul li ul {
-  background: orange;
+  background: #777777;
   visibility: hidden;
   opacity: 0;
   min-width: 400px;
