--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@ ul li ul li {
     
     <li><a href="#" class=one>Articles</a>
       <ul class="dropdown">
-        <li><a href="#AzureLogons">Reporting on successful Azure logons</a></li>
-        <li><a href="#2" class=two>Secure Office365 reports with a certifificate</a></li>
-        <li><a href="#3" class=two>Using Graph to send emails with inline images</a></li>
-        <li><a href="#4" class=two>Visualizing Graph data into Google Charts</a></li>
+        <li><a href="#AzureLogons" class=one>Reporting on successful Azure logons</a></li>
+        <li><a href="#2" class=one>Secure Office365 reports with a certifificate</a></li>
+        <li><a href="#3" class=one>Using Graph to send emails with inline images</a></li>
+        <li><a href="#4" class=one>Visualizing Graph data into Google Charts</a></li>
       </ul>
     </li>
     <li><a href=about.html class=one>About</a></li>
