--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@ ul li ul:hover,
 ul li ul:focus {
   visibility: visible;
   opacity: 1;
-  display: block
-    background: #777777;
+  display: block;
+  background: #777777;
 }
 
 ul li ul li {
