--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@ ul li ul li {
         <li><a href="#AzureLogons" class=two>Reporting on successful Azure logons</a></li>
         <li><a href="#2" class=two>Secure Office365 reports with a certifificate</a></li>
         <li><a href="#3" class=two>Using Graph to send emails with inline images</a></li>
-        <li><a href="#4" class=two>Visualizing Graph data into Google Charts</a></li>
+        <li><a href="#4" class=two>Visualizing Graph data with Google Charts</a></li>
+        <li><a href="#5" class=two>Keeping a log of NetScaler AlwaysON connections</a></li>
+        <li><a href="#6" class=two>Cleaning up your Windows DNS server</a></li>
       </ul>
     </li>
     <li><a href=about.html class=one>About</a></li>
