--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
 
 /* Add a red background color to navbar links on hover */
 .navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
+  background-color: #c9c7c7;
 }
 
 /* Dropdown content (hidden by default) */
