--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
   <title>PowerShell & Graph Blog</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
       body { margin: 0; padding: 0; background-color:#c9c7c7; }
 a:link {
@@ -142,8 +143,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
       <td style='color:#e09738;padding30px;font-size:15px;height:30px;' class=one>
       
  <div class="navbar">
-  <a href="#home">About</a>
-  <a href="#news">Links</a>
+ 
   <div class="dropdown">
     <button class="dropbtn">Articles
       <i class="fa fa-caret-down"></i>
@@ -157,6 +157,8 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
         <a href="#6" class=two>Cleaning up your Windows DNS server</a>
     </div>
   </div>
+    <a href="#home">About</a>
+  <a href="#news">Links</a>
 </div> 
 
  
