--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
           <br>
           Finally we can keep track of successful and failed logons per day by outputting to a log file which can then be read by the PowerShell script and displayed in a HTML page. Each bar links to an Excel report listing all the logons.<br>
           <br>
-          <img src=image02.png alt="Table of all logons">
+          <img src=image02.PNG alt="Table of all logons">
           <div class=ImageCaption>Table of all logons per day.</div>
           <br><br>
                   <div class=tags>Tags: IPv4 Graph PowerShell</div><br>
