--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
     </button>
     <div class="dropdown-content">
  <a href="#AzureLogons" class=two>Reporting on successful Azure logons</a>
-        <a href="#2" class=two>Secure Office365 reports with a certifificate</a>
+        <a href="#Office365Cert" class=two>Secure Office365 reports with a certifificate</a>
         <a href="#3" class=two>Using Graph to send emails with inline images</a>
         <a href="#4" class=two>Visualizing Graph data with Google Charts</a>
         <a href="#5" class=two>Keeping a log of NetScaler AlwaysON connections</a>
@@ -196,6 +196,18 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
           <div class=ImageCaption>Table of all logons per day.</div>
           <br><br>
                   <div class=tags>Tags: IPv4 Graph PowerShell</div><br>
+                  <br>
+                  <div class="horizontal_dotted_line"></div><br>
+                  <br>
+        </div>
+	      
+	      
+	    <div class=headline id="Office365Cert"><b>Secure Office365 reports with a certifificate</b></div><br>  
+	      <div class=articleContent>When using Graph or the new ExchangeOnlineManagement module we can easily connect to to the Azure AD App using a self-signed client certificate. 
+		      For the Office365 Reporting API however their are only examples connecting using a shared secret. If like me you would prefer not to be putting this secret on a script file, then reaqd on.<br>
+		      <br>
+		         <br><br>
+                  <div class=tags>Tags: Office365 Reporting API/div><br>
                   <br>
                   <div class="horizontal_dotted_line"></div><br>
                   <br>
