--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
 		      For the Office365 Reporting API however their are only examples connecting using a shared secret. If like me you would prefer not to be putting this secret on a script file, then reaqd on.<br>
 		      <br>
 		         <br><br>
-                  <div class=tags>Tags: Office365 Reporting API/div><br>
+                  <div class=tags>Tags: Office365 Reporting API</div><br>
                   <br>
                   <div class="horizontal_dotted_line"></div><br>
                   <br>
