--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
         <a href="#6" class=two>Cleaning up your Windows DNS server</a>
     </div>
   </div>
-    <a href="#home">About</a>
+    <a href="about.html">About</a>
   <a href="#news">Links</a>
 </div> 
 
