--- a/about.html
+++ b/about.html
@@ -171,7 +171,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
         <div class=articleContent>The main reason for this site is to keep a track on projects I have taken on in my various jobs.<br><br>
           <b>Current Microsoft Certs</b><br>
            Troubleshooting Microsoft Exchange Online - November 2022<br>
-          <img src=ms_badge.svg>
+          <img src=ms_badge.png>
           <br><br>
                   <div class=tags>Tags: Website</div><br>
                   <br>
