--- a/about.html
+++ b/about.html
@@ -158,7 +158,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
     </div>
   </div>
     <a href="#home">About</a>
-  <a href="#news">Links</a>
+  <a href="links.html">Links</a>
 </div> 
 
  
