--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
- <a href="#AzureLogons" class=two>Reporting on successful Azure logons</a>
+ <a href="index.html" class=two>Reporting on successful Azure logons</a>
         <a href="#Office365Cert" class=two>Secure Office365 reports with a certifificate</a>
         <a href="#InlineImages" class=two>Using Graph to send emails with inline images</a>
         <a href="#GoogleCharts" class=two>Visualizing Graph data with Google Charts</a>
