--- a/about.html
+++ b/about.html
@@ -170,8 +170,10 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
       <td style='padding-right:200px;'><div class=headline id="AzureLogons"><b>About</b></div><br>
         <div class=articleContent>The main reason for this site is to keep a track on projects I have taken on in my various jobs.<br><br>
           <b>Current Microsoft Certs</b><br>
-           Troubleshooting Microsoft Exchange Online - November 2022<br>
-          <img src=ms_badge.jpg width=40>
+           <table>
+		   <tr><td><img src=ms_badge.jpg width=50></td><td>MS-220</td><td>Exchange Online Support Engineer Speciality</td><td>November 2022</td></tr>
+		   <tr><td><img src=ms_badge.jpg width=50></td><td>MS-740</td><td>Teams Support Engineer Speciality</td><td>November 2022</td></tr>
+	</table>
           <br><br>
                   <div class=tags>Tags: Website</div><br>
                   <br>
