--- a/about.html
+++ b/about.html
@@ -170,10 +170,10 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
       </td>
  </tr>
     <tr>
-      <td></td>
+    
       <td style='padding-right:200px;'><div class=headline id="AzureLogons"><b>About</b></div><br>
         <div class=articleContent>I started this blog to mostly keep a track on various mini projects I have worked on in the last few years. Recent focus has been on PowerShell scripts integrating with MS Graph via an Azure AD App.<br><br>
-          <b>Current Microsoft Certs</b><br>
+          <br><b>Current Microsoft Certs</b><br>
            <table>
 		   <tr><td><img src=ms_badge.jpg width=50></td><td>MS-220</td><td>Exchange Online Support Engineer Speciality</td><td>November 2022</td></tr>
 		   <tr><td><img src=ms_badge.jpg width=50></td><td>MS-740</td><td>Teams Support Engineer Speciality</td><td>November 2022</td></tr>
