--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
 	    <table>
 		<tr>
 	
-	      <td style='color:#e09738;padding30px;font-size:15px;height:30px;' class=one><br>
+	      <td style='color:#e09738;padding30px;font-size:15px;height:30px;' class=one><br><br>
       
  <div class="navbar">
  
@@ -170,7 +170,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
  </tr>
     <tr>
     
-      <td style='padding-right:200px;'><div class=headline id="AzureLogons"><br><b>About</b></div><br>
+      <td style='padding-right:200px;'><div class=headline id="AzureLogons"><br><br><b>About</b></div>
         <div class=articleContent>I started this blog to mostly keep a track on various mini projects I have worked on in the last few years. Recent focus has been on PowerShell scripts integrating with MS Graph via an Azure AD App.<br><br>
           <br><b>Current Microsoft Certs</b><br>
            <table>
