--- a/about.html
+++ b/about.html
@@ -176,6 +176,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
            <table>
 		   <tr><td><img src=ms_badge.jpg width=50></td><td>MS-220</td><td>Exchange Online Support Engineer Speciality</td><td>November 2022</td></tr>
 		   <tr><td><img src=ms_badge.jpg width=50></td><td>MS-740</td><td>Teams Support Engineer Speciality</td><td>November 2022</td></tr>
+		   <tr><td><img src=ms_badge2.jpg width=50></td><td>AZ-104</td><td>Microsoft Azure Administrator</td><td>December 2022</td></tr>
 	</table>
           <br><br> 
                   <div class=tags>Tags: Website</div><br>
