--- a/about.html
+++ b/about.html
@@ -174,9 +174,9 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
         <div class=articleContent>I started this blog to mostly keep a track on various mini projects I have worked on in the last few years. Recent focus has been on PowerShell scripts integrating with MS Graph via an Azure AD App.<br><br>
           <br><b>Current Microsoft Certs</b><br>
            <table>
-		   <tr><td><img src=ms_badge.png width=50></td><td>MS-220</td><td>Exchange Online Support Engineer Speciality</td><td>November 2022</td></tr>
-		   <tr><td><img src=ms_badge.png width=50></td><td>MS-740</td><td>Teams Support Engineer Speciality</td><td>November 2022</td></tr>
-		   <tr><td><img src=ms_badge2.png width=50></td><td>AZ-104</td><td>Microsoft Azure Administrator</td><td>December 2022</td></tr>
+		   <tr><td><img src=ms-220.png width=50></td><td>MS-220</td><td>Exchange Online Support Engineer Speciality</td><td>November 2022</td></tr>
+		   <tr><td><img src=ms-740.png width=50></td><td>MS-740</td><td>Teams Support Engineer Speciality</td><td>November 2022</td></tr>
+		   <tr><td><img src=az-104.png width=50></td><td>AZ-104</td><td>Microsoft Azure Administrator</td><td>December 2022</td></tr>
 	</table>
           <br><br> 
                   <div class=tags>Tags: Website</div><br>
