--- a/about.html
+++ b/about.html
@@ -172,7 +172,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
     
       <td style='padding-right:200px;'><div class=headline id="AzureLogons"><br><br><b>About</b></div>
         <div class=articleContent>I started this blog to mostly keep a track on various mini projects I have worked on in the last few years. Recent focus has been on PowerShell scripts integrating with MS Graph via an Azure AD App.<br><br>
-          <br><b>Current Microsoft Certs</b><br>
+          <div class=headline id="AzureLogons"><br><br><b>About</b></div>
            <table>
 		   <tr><td><img src=ms-220.png width=50></td><td>MS-220</td><td style='width:200px;'>Exchange Online Support Engineer Speciality</td><td>November 2022</td></tr>
 		   <tr><td><img src=ms-740.png width=50></td><td>MS-740</td><td>Teams Support Engineer Speciality</td><td>November 2022</td></tr>
