--- a/about.html
+++ b/about.html
@@ -172,9 +172,9 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
     
       <td style='padding-right:200px;'><div class=headline id="AzureLogons"><br><br><b>About</b></div>
         <div class=articleContent>I started this blog to mostly keep a track on various mini projects I have worked on in the last few years. Recent focus has been on PowerShell scripts integrating with MS Graph via an Azure AD App.<br><br>
-          <div class=headline id="AzureLogons"><br><br><b>About</b></div>
+          <div class=headline id="AzureLogons"><br><br><b>Certifications</b></div>
            <table>
-		   <tr><td><img src=ms-220.png width=50></td><td style='font-size 12px;' >MS-220</td><td style='width:450px; font-size 12px;' >Exchange Online Support Engineer Speciality</td><td style='font-size 12px;'>November 2022</td></tr>
+		   <tr><td><img src=ms-220.png width=50></td><td style='font-size 12px; width:70px;' >MS-220</td><td style='width:450px; font-size 12px;' >Exchange Online Support Engineer Speciality</td><td style='font-size 12px;'>November 2022</td></tr>
 		   <tr><td><img src=ms-740.png width=50></td><td style='font-size 12px;' >MS-740</td><td style='width:450px; font-size 12px;' >Teams Support Engineer Speciality</td><td style='font-size 12px;'>November 2022</td></tr>
 		   <tr><td><img src=az-104.png width=50></td><td style='font-size 12px;' >AZ-104</td><td  style='width:450px; font-size 12px;'>Microsoft Azure Administrator</td><td style='font-size 12px;'>December 2022</td></tr>
 	</table>
