--- a/about.html
+++ b/about.html
@@ -152,12 +152,13 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
- <a href="index.html" class=two>Reporting on successful Azure logons</a>
-        <a href="#Office365Cert" class=two>Secure Office365 reports with a certifificate</a>
-        <a href="#InlineImages" class=two>Using Graph to send emails with inline images</a>
-        <a href="#GoogleCharts" class=two>Visualizing Graph data with Google Charts</a>
-        <a href="#5" class=two>Keeping a log of NetScaler AlwaysON connections</a>
-        <a href="#6" class=two>Cleaning up your Windows DNS server</a>
+ <a href="index.html" class=two>Home</a>
+	<a href="iisQueue.html" class=two>IIS Mapi Queue full with NetScaler</a>
+        <a href="o365cert.html" class=two>Secure Office365 reports with a certifificate</a>
+        <a href="graphMail.html" class=two>Using Graph to send emails with inline images</a>
+        <a href="charts.html" class=two>Visualizing Graph data with Google Charts</a>
+        <a href="alwaysOn.html" class=two>Keeping a log of NetScaler AlwaysON connections</a>
+        <a href="DNScleanup.html" class=two>Cleaning up your Windows DNS server</a>
     </div>
   </div>
     <a href="#home">About</a>
