--- a/links.html
+++ b/links.html
@@ -170,7 +170,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
  </tr>
     <tr>
     
-      <td style='padding-right:200px;'><div class=headline id="AzureLogons"><br><br><b>Links</b></div>
+      <td style='padding-right:200px; width:100%;'><div class=headline id="AzureLogons"><br><br><b>Links</b></div>
         <div class=articleContent>A collection of various links.<br><br>
            <table>
              <tr><td><td style='width:370px; font-size 12px;' ><a href='https://www.michev.info/'>Michev Blog</a></td><td style='font-size 12px;'></td></tr>
