--- a/IISqueue.html
+++ b/IISqueue.html
@@ -160,7 +160,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
         <a href="DNScleanup.html" class=two>Cleaning up your Windows DNS server</a>
     </div>
   </div>
-    <a href="#home">About</a>
+    <a href="about.html">About</a>
   <a href="links.html">Links</a>
 </div> 
 
