--- a/links.html
+++ b/links.html
@@ -143,7 +143,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
 	    <table>
 		<tr>
 	
-	      <td style='color:#e09738;padding30px;font-size:15px;height:30px;' class=one><br><br>
+	      <td style='color:#e09738;padding30px;font-size:15px;height:30px;width:100%;' class=one><br><br>
       
  <div class="navbar">
  
@@ -172,7 +172,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
     
       <td style='padding-right:200px; width:100%;'><div class=headline id="AzureLogons"><br><br><b>Links</b></div>
         <div class=articleContent>A collection of various links.<br><br>
-           <table>
+           <table style='width:100%;'>
              <tr><td><td style='width:370px; font-size 12px;' ><a href='https://www.michev.info/'>Michev Blog</a></td><td style='font-size 12px;'></td></tr>
 		         <tr><td><td style='width:370px; font-size 12px;' ><a href='https://tech.nicolonsky.ch/'>nicolonsky tech</a></td><td style='font-size 12px;'></td></tr>
 	</table>
