--- a/links.html
+++ b/links.html
@@ -139,8 +139,8 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
       <td style='font-size:50px;padding:30px;color:black;width:120px;vertical-align:top;' rowspan=2>PowerShell<br> & Graph<br>Blog</td>
       
 
-    <td>
-	    <table>
+    <td style='width:100%;'>
+	    <table style='width:100%;'>
 		<tr>
 	
 	      <td style='color:#e09738;padding30px;font-size:15px;height:30px;width:100%;' class=one><br><br>
