--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
       <td style='font-size:50px;padding:30px;color:black;width:120px;vertical-align:top;' rowspan=2>PowerShell<br> & Graph<br>Blog</td>
       
 
-    <td>
+    <td style=width:100%;'>
 	    <table>
 		<tr>
 	
