--- a/links.html
+++ b/links.html
@@ -172,8 +172,8 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
     
       <td style='padding-right:200px; width:100%;'><div class=headline id="AzureLogons"><br><br><b>Links</b></div>
         <div class=articleContent>A collection of various links.<br><br>
-           <table style='width:100%;'>
-             <tr><td><td style='width:370px; font-size 12px;' ><a href='https://www.michev.info/'>Michev Blog</a></td><td style='font-size 12px;'></td></tr>
+           <table>
+             <tr><td><td style='width:370px; font-size 12px; align:left' ><a href='https://www.michev.info/'>Michev Blog</a></td><td style='font-size 12px;'></td></tr>
 		         <tr><td><td style='width:370px; font-size 12px;' ><a href='https://tech.nicolonsky.ch/'>nicolonsky tech</a></td><td style='font-size 12px;'></td></tr>
 	</table>
           <br><br> 
