--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
       <td style='font-size:50px;padding:30px;color:black;width:120px;vertical-align:top;' rowspan=2>PowerShell<br> & Graph<br>Blog</td>
       
 
-    <td style=width:100%;'>
+    <td style='width:100%;'>
 	    <table>
 		<tr>
 	
@@ -170,8 +170,8 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
  </tr>
     <tr>
     
-      <td style='padding-right:200px;'><div class=headline id="AzureLogons"><br><br><b>About</b></div>
-        <div class=articleContent>I started this blog to mostly keep a track on various mini projects I have worked on in the last few years. Recent focus has been on PowerShell scripts integrating with MS Graph via an Azure AD App.<br><br>
+      <td style='padding-right:200px;width:100%;'><div class=headline id="AzureLogons"><br><br><b>About</b></div>
+        <div class=articleContent>I started this blog to mostly keep a track on various mini projects I have worked on in the last few years. Recent focus has been on PowerShell scripts integrating with MS Graph via an Azure AD App.<br>
           <div class=headline id="AzureLogons"><br><br><b>Certifications</b></div>
            <table>
 		   <tr><td><img src=ms-220.png width=50></td><td style='font-size 12px; width:70px;' >MS-220</td><td style='width:370px; font-size 12px;' >Exchange Online Support Engineer Speciality</td><td style='font-size 12px;'>November 2022</td></tr>
