--- a/about.html
+++ b/about.html
@@ -140,7 +140,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
       
 
     <td style='width:100%;'>
-	    <table>
+	    <table style='width:100%;'>
 		<tr>
 	
 	      <td style='color:#e09738;padding30px;font-size:15px;height:30px;' class=one><br><br>
@@ -170,10 +170,10 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
  </tr>
     <tr>
     
-      <td style='padding-right:200px;width:100%;'><div class=headline id="AzureLogons"><br><br><b>About</b></div>
+      <td style='padding-right:200px;width:100%;'><div class=headline id="AzureLogons"><b>About</b></div>
         <div class=articleContent>I started this blog to mostly keep a track on various mini projects I have worked on in the last few years. Recent focus has been on PowerShell scripts integrating with MS Graph via an Azure AD App.<br>
           <div class=headline id="AzureLogons"><br><br><b>Certifications</b></div>
-           <table>
+           <table style='padding:2px;'>
 		   <tr><td><img src=ms-220.png width=50></td><td style='font-size 12px; width:70px;' >MS-220</td><td style='width:370px; font-size 12px;' >Exchange Online Support Engineer Speciality</td><td style='font-size 12px;'>November 2022</td></tr>
 		   <tr><td><img src=ms-740.png width=50></td><td style='font-size 12px;' >MS-740</td><td style='width:370px; font-size 12px;' >Teams Support Engineer Speciality</td><td style='font-size 12px;'>November 2022</td></tr>
 		   <tr><td><img src=az-104.png width=50></td><td style='font-size 12px;' >AZ-104</td><td  style='width:370px; font-size 12px;'>Microsoft Azure Administrator</td><td style='font-size 12px;'>December 2022</td></tr>
