--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
  </tr>
     <tr>
     
-      <td style='padding-right:200px;width:100%;'><div class=headline id="AzureLogons"><b>About</b></div>
+      <td style='padding-right:200px;width:100%;'><br><div class=headline id="AzureLogons"><b>About</b></div>
         <div class=articleContent>I started this blog to mostly keep a track on various mini projects I have worked on in the last few years. Recent focus has been on PowerShell scripts integrating with MS Graph via an Azure AD App.<br>
           <div class=headline id="AzureLogons"><br><br><b>Certifications</b></div>
            <table style='padding:2px;'>
