--- a/iisQueue.html
+++ b/iisQueue.html
@@ -170,7 +170,7 @@ a.two:hover {color: #646d8c; text-decoration: none; font-size:14px;}
  </tr>
     <tr>
     
-      <td style='padding-right:200px; width:100%;'><div class=headline id="AzureLogons"><br><br><b>IIS Mapi Queue full with NetScaler</b></div>
+      <td style='padding-right:200px; width:100%;'><div class=headline id="AzureLogons"><br><b>IIS Mapi Queue full with NetScaler</b></div>
         <div class=articleContent>A recent issue I came across appeared to happen at random times during the working week. Outlook cleints would be disconnected for up to 30 minutes before returning to normal. 
 		As the issue seemed to only occur after a patching cycle the focus at first was on what was in the those patches and was there an incompatibility with Outlook. 
 		Evenetually I narrowed down the issue with the help of the HTTP_Err logs (c:\windows\logs\HTTP_Err\) which are never deleted, qhich helps with investigations. 
